##################################################################################
# executable
##################################################################################
add_avr_executable(
   PDCViewer
   PDCViewer.c
   PDCViewer.h
)

##################################################################################
# find avr-libc
##################################################################################
find_library(C_LIB c)
message(STATUS "avr-libc: ${C_LIB}")

##################################################################################
# link elf target to libraries
##################################################################################
target_link_libraries(
   PDCViewer-${AVR_MCU}.elf
   can-${AVR_MCU}
   spi-${AVR_MCU}
   timer-${AVR_MCU}
   matrixbar-${AVR_MCU}
   module_config-${AVR_MCU}
   ${C_LIB}
)


